@@ -1,7 +1,9 @@
 Jun 30, 2014
 	- Block Class: added block size field (blkSize) and removed block 
 		quantity field (blkQty)
-	- Piece Class: added piece quantity field (pQty) 
+	- Piece Class: added piece quantity field (pQty) and add block name field 
+		(blkName)
+	
 
 Jun 4, 2014: 
 	-  Created random generator of enum and put in each enum class
